cabal-version: 3.4
name: merkle-patricia-forestry
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal <lambdaproofs@pm.me>
maintainer: info@zkfold.io
-- copyright:
category: Data Structures, Cryptography
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common common
  ghc-options: -Wall
  default-extensions:
    DerivingStrategies
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    ViewPatterns

library
  import: common
  exposed-modules:
    Crypto.Hash.MerklePatriciaForestry
    Crypto.Hash.MerklePatriciaForestry.Internal
    Crypto.Hash.MerklePatriciaForestry.Internal.Hash
    Crypto.Hash.MerklePatriciaForestry.Internal.Types
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.HexDigit
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.Key
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.Leaf
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.Proof
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.SparseVector
    Crypto.Hash.MerklePatriciaForestry.Internal.Types.Value
    Crypto.Hash.MerklePatriciaForestry.Internal.Utils

  other-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base >=4.18.0.0 && <5,
    base16-bytestring,
    blake2,
    bytestring,
    containers,
    text,
    vector,

  hs-source-dirs: src
  default-language: GHC2021

test-suite merkle-patricia-forestry-test
  import: common
  default-language: GHC2021
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    base16-bytestring,
    bytestring,
    containers,
    merkle-patricia-forestry,
    tasty,
    tasty-hunit,
